SERVER-34774: Maintain multikey state during multi-statement transaction.